<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CheckoutActivity">

    <TextView
        android:id="@+id/textView_YourOrder"
        android:layout_width="212dp"
        android:layout_height="59dp"
        android:layout_marginTop="40dp"
        android:text="@string/yourOrder"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textFontWeight="5"
        android:textSize="40dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.458"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="80dp"
        android:text="@string/basePrice"
        android:textAlignment="viewStart"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_YourOrder" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginTop="48dp"
        android:text="@string/toppings"
        android:textAlignment="viewStart"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4_basePrice"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.704"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView5_toppingsPrice"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_marginTop="48dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/textView4_basePrice"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView4_basePrice" />

    <TextView
        android:id="@+id/textView6_toppingsList"
        android:layout_width="275dp"
        android:layout_height="67dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.159"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:text="@string/deliveryCost"
        android:textAlignment="viewStart"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView6_toppingsList" />

    <TextView
        android:id="@+id/textView_deliveryCost"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/textView5_toppingsPrice"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toTopOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="60dp"
        android:text="@string/total_cost"
        android:textAlignment="viewStart"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView10_totalCost"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_marginTop="60dp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView_deliveryCost"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/textView_deliveryCost" />

    <Button
        android:id="@+id/button_finish"
        android:layout_width="194dp"
        android:layout_height="58dp"
        android:text="@string/button_finish"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />
</androidx.constraintlayout.widget.ConstraintLayout>