<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <GridLayout
        android:id="@+id/gridlayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="5"
        android:gravity="center"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonCheckout"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/checkout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonTopping"
        android:layout_width="195dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/addtopping"
        app:layout_constraintBottom_toTopOf="@+id/buttonCheckout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/buttonCheckout" />

    <Button
        android:id="@+id/buttonClearPizza"
        android:layout_width="195dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/clearPizza"
        app:layout_constraintBottom_toTopOf="@+id/buttonCheckout"
        app:layout_constraintEnd_toEndOf="@+id/buttonCheckout"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/buttonTopping" />

    <ImageView
        android:id="@+id/imagePizza"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginBottom="80dp"
        app:layout_constraintBottom_toTopOf="@+id/progressBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/pizza" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="92dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonCheckout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/checkBoxDelivery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/delivery"
        app:layout_constraintBottom_toTopOf="@+id/progressBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.094"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>